# wasm_game_of_life

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  log.rs
tests/: web.rs
www/: index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/src/: index.ts  renderByCanvas2D.ts
www/src/shader/: render.wgsl
