[package]
name = "wasm_game_of_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
# https://rustwasm.github.io/docs/wasm-pack/tutorials/npm-browser-packages/template-deep-dive/cargo-toml.html#1-crate-type
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.82" }

[dev-dependencies]
wasm-bindgen-test = "0.3.32"
